--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Raleway', sans-serif;
     overflow: hidden;
     background-image: url('/img/background_Tekengebied\ 1.png');
+    background-size: cover;
 }
 
 main section {
