--- a/tim/css/style.css
+++ b/tim/css/style.css
@@ -167,3 +167,9 @@ main section {
     transform: rotate(45deg);
     opacity: 0.1;
 }
+
+@media only screen and (max-width: 950px) {
+    #backgroundKaartjeSection {
+        transform: rotate(90deg) scale(.7) translateX(50%) translateY(-6%);
+    }
+}
