--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ main {
     transform: scale(.8);
     left: -1em;
     top: 3em;
-
+    width: 50%;
 }
 
 .betrokkenen {
@@ -28,7 +28,13 @@ main {
     transform: scale(.8);
     right: 0;
     top: 3em;
+    width: 50%;
 }
+
+img {
+    width: 100%;
+}
+
 
 .fotoContainer {
     position: absolute;
@@ -70,4 +76,61 @@ main {
     cursor: pointer;
 }
 
+@media only screen and (max-width: 950px) {
 
+    body {
+        margin: 0;
+        font-family: 'Raleway', sans-serif;
+        overflow: visible;
+        background-image: url(../img/background_Tekengebied\ 1.png);
+        background-size: cover;
+    }
+
+    main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 100%;
+        flex-direction: column;
+        align-content: center;
+        flex-wrap: nowrap;
+    }
+
+    .betrokkenen {
+        position: absolute;
+        transform: scale(.8);
+        right: 0;
+        top: 3em;
+        display: none;
+    }
+
+    .verdachten {
+        position: absolute;
+        transform: scale(.8);
+        left: -1em;
+        top: 3em;
+        display: none;
+    }
+
+
+
+    .fotoContainer {
+        position: relative;
+        top: 0;
+    }
+
+    #backgroundKaartjeTimSection {
+        transform: rotate(5deg) scale(.8) translateX(0);
+        height: 46%;
+    }
+
+    #backgroundKaartjeJodySection {
+        transform: rotate(4deg) scale(.8);
+        top: 0;
+    }
+
+    #backgroundKaartjeMartijnSection {
+        transform: rotate(-3deg) scale(.8) translateX(0%);
+    }
+}
